--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.11-0": ["Sat May 02 2015", "Dan Lazewatsky", "dan@lazewatsky.com"]}
+{"0.3.11-0": ["Sat May 02 2015", "Dan Lazewatsky", "dan@lazewatsky.com"], "0.3.12-0": ["Fri Jul 24 2015", "Dan Lazewatsky", "dan@lazewatsky.com"]}
