--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_py_console
-	base = 7d7afe8
-	trimbase = 
+	base = 8c8a9c9
+	trimbase = 7d7afe8
 	parent = upstream
 	previous = b517831
