--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_image_view
-	base = 642c50b
-	trimbase = 
+	base = 52a56a4
+	trimbase = 642c50b
 	parent = upstream
 	previous = b517831
