--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_graph
-	base = 1a95145
-	trimbase = 
+	base = 5b8101f
+	trimbase = 1a95145
 	parent = upstream
 	previous = b517831
