--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_console
-	base = 8909ac6
-	trimbase = 
+	base = 2a0116f
+	trimbase = 8909ac6
 	parent = upstream
 	previous = b517831
