--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_srv
-	base = 5eec607
-	trimbase = 
+	base = 787141a
+	trimbase = 5eec607
 	parent = upstream
 	previous = b517831
