--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_reconfigure
-	base = 4f7a524
-	trimbase = 
+	base = 54183b8
+	trimbase = 4f7a524
 	parent = upstream
 	previous = b517831
