--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_dep
-	base = 1bbb38e
-	trimbase = 
+	base = 5aad7b0
+	trimbase = 1bbb38e
 	parent = upstream
 	previous = b517831
