--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_bag
-	base = da07829
-	trimbase = 
+	base = a884da1
+	trimbase = da07829
 	parent = upstream
 	previous = b517831
