--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_plot
-	base = 88b92c8
-	trimbase = 
+	base = a2891e0
+	trimbase = 88b92c8
 	parent = upstream
 	previous = b517831
