--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_publisher
-	base = dd060b8
-	trimbase = 
+	base = 5134baf
+	trimbase = dd060b8
 	parent = upstream
 	previous = b517831
