--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_web
-	base = fdfa386
-	trimbase = 
+	base = 71a43ea
+	trimbase = fdfa386
 	parent = upstream
 	previous = b517831
