--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_shell
-	base = 3d10556
-	trimbase = 
+	base = 2d8ed29
+	trimbase = 3d10556
 	parent = upstream
 	previous = b517831
