--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_launch
-	base = 934daf5
-	trimbase = 
+	base = 94256d9
+	trimbase = 934daf5
 	parent = upstream
 	previous = b517831
