--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_topic
-	base = ee642e5
-	trimbase = 
+	base = 3317e6c
+	trimbase = ee642e5
 	parent = upstream
 	previous = b517831
