--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_action
-	base = b54b073
-	trimbase = 
+	base = bde0a52
+	trimbase = b54b073
 	parent = upstream
 	previous = b517831
