--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_top
-	base = 0697a1e
-	trimbase = 
+	base = f57e871
+	trimbase = 0697a1e
 	parent = upstream
 	previous = b517831
