--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_py_common
-	base = d04b6ab
-	trimbase = 
+	base = bba7a8e
+	trimbase = d04b6ab
 	parent = upstream
 	previous = b517831
