--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_service_caller
-	base = 303ffb9
-	trimbase = 
+	base = fcb4727
+	trimbase = 303ffb9
 	parent = upstream
 	previous = b517831
