--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_msg
-	base = 2f803d8
-	trimbase = 
+	base = 167b9dc
+	trimbase = 2f803d8
 	parent = upstream
 	previous = b517831
