--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_logger_level
-	base = 10a8895
-	trimbase = 
+	base = 309afdd
+	trimbase = 10a8895
 	parent = upstream
 	previous = b517831
