--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_bag_plugins
-	base = d5b6c47
-	trimbase = 
+	base = c41596f
+	trimbase = d5b6c47
 	parent = upstream
 	previous = b517831
