--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_common_plugins
-	base = 57e5a2d
-	trimbase = 
+	base = 1676d26
+	trimbase = 57e5a2d
 	parent = upstream
 	previous = b517831
