--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_py_console
-	base = b4280eb
-	trimbase = 
+	base = f347f57
+	trimbase = b4280eb
 	parent = upstream
 	previous = 44ef8bb
