--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_image_view
-	base = 33a2fd2
-	trimbase = 
+	base = 6754149
+	trimbase = 33a2fd2
 	parent = upstream
 	previous = 44ef8bb
