--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_graph
-	base = 48d9da3
-	trimbase = 
+	base = 20b2309
+	trimbase = 48d9da3
 	parent = upstream
 	previous = 44ef8bb
