--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_console
-	base = 635483a
-	trimbase = 
+	base = f1507c9
+	trimbase = 635483a
 	parent = upstream
 	previous = 44ef8bb
