--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_srv
-	base = 21a7a21
-	trimbase = 
+	base = 0c84f09
+	trimbase = 21a7a21
 	parent = upstream
 	previous = 44ef8bb
