--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_reconfigure
-	base = 6de9375
-	trimbase = 
+	base = 3aa1fc1
+	trimbase = 6de9375
 	parent = upstream
 	previous = 44ef8bb
