--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_dep
-	base = 58826d8
-	trimbase = 
+	base = 57085cc
+	trimbase = 58826d8
 	parent = upstream
 	previous = 44ef8bb
