--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_bag
-	base = 718b592
-	trimbase = 
+	base = e34c660
+	trimbase = 718b592
 	parent = upstream
 	previous = 44ef8bb
