--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_plot
-	base = fe30744
-	trimbase = 
+	base = c313d63
+	trimbase = fe30744
 	parent = upstream
 	previous = 44ef8bb
