--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_publisher
-	base = 65be823
-	trimbase = 
+	base = b2abaa5
+	trimbase = 65be823
 	parent = upstream
 	previous = 44ef8bb
