--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_web
-	base = cccc6ec
-	trimbase = 
+	base = 2ddeb24
+	trimbase = cccc6ec
 	parent = upstream
 	previous = 44ef8bb
