--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_shell
-	base = ead4027
-	trimbase = 
+	base = 421db4e
+	trimbase = ead4027
 	parent = upstream
 	previous = 44ef8bb
