--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_launch
-	base = 49b92bf
-	trimbase = 
+	base = 8febe4e
+	trimbase = 49b92bf
 	parent = upstream
 	previous = 44ef8bb
