--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_topic
-	base = ea13838
-	trimbase = 
+	base = 45ddda6
+	trimbase = ea13838
 	parent = upstream
 	previous = 44ef8bb
