--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_action
-	base = 6ebaec7
-	trimbase = 
+	base = 70d2a2c
+	trimbase = 6ebaec7
 	parent = upstream
 	previous = 44ef8bb
