--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_top
-	base = 1c05ede
-	trimbase = 
+	base = 118d8cd
+	trimbase = 1c05ede
 	parent = upstream
 	previous = 44ef8bb
