--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_py_common
-	base = 682030a
-	trimbase = 
+	base = 6d2247d
+	trimbase = 682030a
 	parent = upstream
 	previous = 44ef8bb
