--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_service_caller
-	base = 344d52b
-	trimbase = 
+	base = b1f2d1b
+	trimbase = 344d52b
 	parent = upstream
 	previous = 44ef8bb
