--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_msg
-	base = 21bfad2
-	trimbase = 
+	base = 3ec4f6c
+	trimbase = 21bfad2
 	parent = upstream
 	previous = 44ef8bb
