--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_logger_level
-	base = 91871c4
-	trimbase = 
+	base = 1f3056d
+	trimbase = 91871c4
 	parent = upstream
 	previous = 44ef8bb
