--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_bag_plugins
-	base = 05d6e28
-	trimbase = 
+	base = 6203fdf
+	trimbase = 05d6e28
 	parent = upstream
 	previous = 44ef8bb
