--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_common_plugins
-	base = fc0f757
-	trimbase = 
+	base = bec1bb2
+	trimbase = fc0f757
 	parent = upstream
 	previous = 44ef8bb
