--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>rqt_py_common</name>
-  <version>0.3.12</version>
+  <version>0.3.13</version>
   <description>
     rqt_py_common provides common functionality for rqt plugins written in Python.
     Despite no plugin is provided, this package is part of the rqt_common_plugins
@@ -20,6 +20,9 @@
   <author>Isaac Saito</author>
 
   <buildtool_depend>catkin</buildtool_depend>
+
+  <build_depend>genmsg</build_depend>
+  <build_depend>std_msgs</build_depend>
 
   <run_depend>genpy</run_depend>
   <run_depend>qt_gui</run_depend>
