--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_py_console
-	base = d5aa767
-	trimbase = 
+	base = 6d75c68
+	trimbase = d5aa767
 	parent = upstream
 	previous = 44ef8bb
