--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_image_view
-	base = 4e1b943
-	trimbase = 
+	base = 46c8f65
+	trimbase = 4e1b943
 	parent = upstream
 	previous = 44ef8bb
