--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_graph
-	base = 47b155b
-	trimbase = 
+	base = 0e5dcce
+	trimbase = 47b155b
 	parent = upstream
 	previous = 44ef8bb
