--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_console
-	base = 87b35f3
-	trimbase = 
+	base = ced4f3a
+	trimbase = 87b35f3
 	parent = upstream
 	previous = 44ef8bb
