--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_srv
-	base = 6140db3
-	trimbase = 
+	base = 30fac59
+	trimbase = 6140db3
 	parent = upstream
 	previous = 44ef8bb
