--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_reconfigure
-	base = 71216cb
-	trimbase = 
+	base = 0d2b369
+	trimbase = 71216cb
 	parent = upstream
 	previous = 44ef8bb
