--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_dep
-	base = 8cf2eba
-	trimbase = 
+	base = 65c048b
+	trimbase = 8cf2eba
 	parent = upstream
 	previous = 44ef8bb
