--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_bag
-	base = 8ebf934
-	trimbase = 
+	base = 8880ca5
+	trimbase = 8ebf934
 	parent = upstream
 	previous = 44ef8bb
