--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_plot
-	base = 73d1679
-	trimbase = 
+	base = 6ff0016
+	trimbase = 73d1679
 	parent = upstream
 	previous = 44ef8bb
