--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_publisher
-	base = cf64c01
-	trimbase = 
+	base = d2bd9f8
+	trimbase = cf64c01
 	parent = upstream
 	previous = 44ef8bb
