--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_web
-	base = 2f30caa
-	trimbase = 
+	base = a137d5d
+	trimbase = 2f30caa
 	parent = upstream
 	previous = 44ef8bb
