--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_shell
-	base = 6e2ee79
-	trimbase = 
+	base = f6a264b
+	trimbase = 6e2ee79
 	parent = upstream
 	previous = 44ef8bb
