--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_launch
-	base = 1d21436
-	trimbase = 
+	base = 6453b89
+	trimbase = 1d21436
 	parent = upstream
 	previous = 44ef8bb
