--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_topic
-	base = dea3483
-	trimbase = 
+	base = 8dc41e9
+	trimbase = dea3483
 	parent = upstream
 	previous = 44ef8bb
