--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_action
-	base = d56c293
-	trimbase = 
+	base = e433f66
+	trimbase = d56c293
 	parent = upstream
 	previous = 44ef8bb
