--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_top
-	base = 7127495
-	trimbase = 
+	base = b326dfd
+	trimbase = 7127495
 	parent = upstream
 	previous = 44ef8bb
