--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_py_common
-	base = a8fef00
-	trimbase = 
+	base = 3c34621
+	trimbase = a8fef00
 	parent = upstream
 	previous = 44ef8bb
