--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_service_caller
-	base = 84b0848
-	trimbase = 
+	base = 88eaf2c
+	trimbase = 84b0848
 	parent = upstream
 	previous = 44ef8bb
