--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_msg
-	base = 71ce153
-	trimbase = 
+	base = 69175db
+	trimbase = 71ce153
 	parent = upstream
 	previous = 44ef8bb
