--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_logger_level
-	base = f1f5ac1
-	trimbase = 
+	base = 78eda03
+	trimbase = f1f5ac1
 	parent = upstream
 	previous = 44ef8bb
