--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_bag_plugins
-	base = 4894d8a
-	trimbase = 
+	base = 4b2442d
+	trimbase = 4894d8a
 	parent = upstream
 	previous = 44ef8bb
