--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = rqt_common_plugins
-	base = ea656d1
-	trimbase = 
+	base = 8dce676
+	trimbase = ea656d1
 	parent = upstream
 	previous = 44ef8bb
