--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.11-0": ["Thu Apr 30 2015", "Scott K Logan", "logans@cottsay.net"], "0.3.12-0": ["Fri Jul 24 2015", "Scott K Logan", "logans@cottsay.net"]}
+{"0.3.13-0": ["Tue Mar 08 2016", "Scott K Logan", "logans@cottsay.net"], "0.3.11-0": ["Thu Apr 30 2015", "Scott K Logan", "logans@cottsay.net"], "0.3.12-0": ["Fri Jul 24 2015", "Scott K Logan", "logans@cottsay.net"]}
