--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 3c1f496
-	trimbase = 
+	trim = rqt_py_console
+	base = 3ac33e4
+	trimbase = 3c1f496
 	parent = upstream
 	previous = eb2e3cc
