--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 343d685
-	trimbase = 
+	trim = rqt_image_view
+	base = 91bb60e
+	trimbase = 343d685
 	parent = upstream
 	previous = eb2e3cc
