--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c24fbb5
-	trimbase = 
+	trim = rqt_graph
+	base = 9609c63
+	trimbase = c24fbb5
 	parent = upstream
 	previous = eb2e3cc
