--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e56d0e2
-	trimbase = 
+	trim = rqt_console
+	base = 1acbcc4
+	trimbase = e56d0e2
 	parent = upstream
 	previous = eb2e3cc
