--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 39f737e
-	trimbase = 
+	trim = rqt_srv
+	base = 7671a93
+	trimbase = 39f737e
 	parent = upstream
 	previous = eb2e3cc
