--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a2337df
-	trimbase = 
+	trim = rqt_reconfigure
+	base = 1cafa75
+	trimbase = a2337df
 	parent = upstream
 	previous = eb2e3cc
