--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 58a9d29
-	trimbase = 
+	trim = rqt_common_plugins
+	base = a407058
+	trimbase = 58a9d29
 	parent = upstream
 	previous = eb2e3cc
