--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7c7237c
-	trimbase = 
+	trim = rqt_bag
+	base = 83000f2
+	trimbase = 7c7237c
 	parent = upstream
 	previous = eb2e3cc
