--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 774610e
-	trimbase = 
+	trim = rqt_plot
+	base = 587b07f
+	trimbase = 774610e
 	parent = upstream
 	previous = eb2e3cc
