--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f28df63
-	trimbase = 
+	trim = rqt_publisher
+	base = 001e997
+	trimbase = f28df63
 	parent = upstream
 	previous = eb2e3cc
