--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fdbbc1b
-	trimbase = 
+	trim = rqt_web
+	base = d7c029a
+	trimbase = fdbbc1b
 	parent = upstream
 	previous = eb2e3cc
