--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4abb260
-	trimbase = 
+	trim = rqt_shell
+	base = ace9ff9
+	trimbase = 4abb260
 	parent = upstream
 	previous = eb2e3cc
