--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 67d6a2b
-	trimbase = 
+	trim = rqt_launch
+	base = 323301d
+	trimbase = 67d6a2b
 	parent = upstream
 	previous = eb2e3cc
