--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e3d91a5
-	trimbase = 
+	trim = rqt_topic
+	base = 6bfa759
+	trimbase = e3d91a5
 	parent = upstream
 	previous = eb2e3cc
