--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = bebda55
-	trimbase = 
+	trim = rqt_action
+	base = cab5390
+	trimbase = bebda55
 	parent = upstream
 	previous = eb2e3cc
