--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c5125a7
-	trimbase = 
+	trim = rqt_top
+	base = ef975f8
+	trimbase = c5125a7
 	parent = upstream
 	previous = eb2e3cc
