--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 32eea03
-	trimbase = 
+	trim = rqt_py_common
+	base = 248b138
+	trimbase = 32eea03
 	parent = upstream
 	previous = eb2e3cc
