--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2453c50
-	trimbase = 
+	trim = rqt_logger_level
+	base = e9f1afc
+	trimbase = 2453c50
 	parent = upstream
 	previous = eb2e3cc
