--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = bf34ffe
-	trimbase = 
+	trim = rqt_msg
+	base = dcacc83
+	trimbase = bf34ffe
 	parent = upstream
 	previous = eb2e3cc
