--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 051a663
-	trimbase = 
+	trim = rqt_service_caller
+	base = f284268
+	trimbase = 051a663
 	parent = upstream
 	previous = eb2e3cc
