--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d61fb6b
-	trimbase = 
+	trim = rqt_dep
+	base = ba4a1ae
+	trimbase = d61fb6b
 	parent = upstream
 	previous = eb2e3cc
