--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 3ee1d3f
-	trimbase = 
+	trim = rqt_bag_plugins
+	base = 823b530
+	trimbase = 3ee1d3f
 	parent = upstream
 	previous = eb2e3cc
