--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 91bb60e
+	base = a97f233
 	trimbase = 
 	parent = release/kinetic/rqt_image_view
-	previous = 
+	previous = 91bb60e
