--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ce6fcdd
+	base = 4417f36
 	trimbase = 
 	parent = debian/kinetic/rqt_image_view
-	previous = 
+	previous = ce6fcdd
