--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 587b07f
+	base = b2b25a5
 	trimbase = 
 	parent = release/kinetic/rqt_plot
-	previous = 
+	previous = 587b07f
