--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = de0898f
+	base = 5ff4135
 	trimbase = 
 	parent = debian/kinetic/rqt_plot
-	previous = 
+	previous = de0898f
