--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 248b138
+	base = e9b174f
 	trimbase = 
 	parent = release/kinetic/rqt_py_common
-	previous = 
+	previous = 248b138
