--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e5f51e2
+	base = 594a475
 	trimbase = 
 	parent = debian/kinetic/rqt_py_common
-	previous = 
+	previous = e5f51e2
