--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 823b530
+	base = 48dbd1d
 	trimbase = 
 	parent = release/kinetic/rqt_bag_plugins
-	previous = 
+	previous = 823b530
