--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0e24149
+	base = 4009145
 	trimbase = 
 	parent = debian/kinetic/rqt_bag_plugins
-	previous = 
+	previous = 0e24149
