--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 83000f2
+	base = 5c6e087
 	trimbase = 
 	parent = release/kinetic/rqt_bag
-	previous = 
+	previous = 83000f2
