--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7800735
+	base = 5ce927f
 	trimbase = 
 	parent = debian/kinetic/rqt_bag
-	previous = 
+	previous = 7800735
