--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a407058
+	base = c97bfe9
 	trimbase = 
 	parent = release/kinetic/rqt_common_plugins
-	previous = 
+	previous = a407058
