--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0502cff
+	base = 9b3c477
 	trimbase = 
 	parent = debian/kinetic/rqt_common_plugins
-	previous = 
+	previous = 0502cff
