--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ef975f8
+	base = d9ddbdd
 	trimbase = 
 	parent = release/kinetic/rqt_top
-	previous = 
+	previous = ef975f8
