--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 48b3af2
+	base = afc554a
 	trimbase = 
 	parent = debian/kinetic/rqt_top
-	previous = 
+	previous = 48b3af2
