--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7671a93
+	base = a52753e
 	trimbase = 
 	parent = release/kinetic/rqt_srv
-	previous = 
+	previous = 7671a93
