--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2503c23
+	base = 1c294e1
 	trimbase = 
 	parent = debian/kinetic/rqt_srv
-	previous = 
+	previous = 2503c23
