--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cab5390
+	base = 3d3ce49
 	trimbase = 
 	parent = release/kinetic/rqt_action
-	previous = 
+	previous = cab5390
