--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 853044e
+	base = 1fff7a1
 	trimbase = 
 	parent = debian/kinetic/rqt_action
-	previous = 
+	previous = 853044e
