--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3ac33e4
+	base = 57f15a2
 	trimbase = 
 	parent = release/kinetic/rqt_py_console
-	previous = 
+	previous = 3ac33e4
