--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0825218
+	base = b6f8aa3
 	trimbase = 
 	parent = debian/kinetic/rqt_py_console
-	previous = 
+	previous = 0825218
