--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f284268
+	base = ced3c16
 	trimbase = 
 	parent = release/kinetic/rqt_service_caller
-	previous = 
+	previous = f284268
