--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 271f19a
+	base = b77cf04
 	trimbase = 
 	parent = debian/kinetic/rqt_service_caller
-	previous = 
+	previous = 271f19a
