--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d7c029a
+	base = 5afc95f
 	trimbase = 
 	parent = release/kinetic/rqt_web
-	previous = 
+	previous = d7c029a
