--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 74f6983
+	base = 455dfb7
 	trimbase = 
 	parent = debian/kinetic/rqt_web
-	previous = 
+	previous = 74f6983
