--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ba4a1ae
+	base = 541d03f
 	trimbase = 
 	parent = release/kinetic/rqt_dep
-	previous = 
+	previous = ba4a1ae
