--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8c3ae57
+	base = c7e8847
 	trimbase = 
 	parent = debian/kinetic/rqt_dep
-	previous = 
+	previous = 8c3ae57
