--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 323301d
+	base = 07d03a6
 	trimbase = 
 	parent = release/kinetic/rqt_launch
-	previous = 
+	previous = 323301d
