--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 14bd855
+	base = bef8d4a
 	trimbase = 
 	parent = debian/kinetic/rqt_launch
-	previous = 
+	previous = 14bd855
