--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6bfa759
+	base = e04a36b
 	trimbase = 
 	parent = release/kinetic/rqt_topic
-	previous = 
+	previous = 6bfa759
