--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dc4b11e
+	base = 22cfee5
 	trimbase = 
 	parent = debian/kinetic/rqt_topic
-	previous = 
+	previous = dc4b11e
