--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1acbcc4
+	base = 4e99c16
 	trimbase = 
 	parent = release/kinetic/rqt_console
-	previous = 
+	previous = 1acbcc4
