--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e393042
+	base = bb5b7d2
 	trimbase = 
 	parent = debian/kinetic/rqt_console
-	previous = 
+	previous = e393042
