--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e393042
+	base = 22750de
 	trimbase = 
 	parent = debian/kinetic/rqt_console
-	previous = 
+	previous = e393042
