--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ace9ff9
+	base = f757eb6
 	trimbase = 
 	parent = release/kinetic/rqt_shell
-	previous = 
+	previous = ace9ff9
