--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a7da1c6
+	base = d11f7d7
 	trimbase = 
 	parent = debian/kinetic/rqt_shell
-	previous = 
+	previous = a7da1c6
