--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9609c63
+	base = 3349f88
 	trimbase = 
 	parent = release/kinetic/rqt_graph
-	previous = 
+	previous = 9609c63
