--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9d27d0b
+	base = 4d68a4b
 	trimbase = 
 	parent = debian/kinetic/rqt_graph
-	previous = 
+	previous = 9d27d0b
