--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 001e997
+	base = 3f932af
 	trimbase = 
 	parent = release/kinetic/rqt_publisher
-	previous = 
+	previous = 001e997
