--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 062bb58
+	base = a74b608
 	trimbase = 
 	parent = debian/kinetic/rqt_publisher
-	previous = 
+	previous = 062bb58
