--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e9f1afc
+	base = fdb729e
 	trimbase = 
 	parent = release/kinetic/rqt_logger_level
-	previous = 
+	previous = e9f1afc
