--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 56d6689
+	base = 3d73bee
 	trimbase = 
 	parent = debian/kinetic/rqt_logger_level
-	previous = 
+	previous = 56d6689
