--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1cafa75
+	base = 67854bf
 	trimbase = 
 	parent = release/kinetic/rqt_reconfigure
-	previous = 
+	previous = 1cafa75
