--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e06cc3b
+	base = dff89e0
 	trimbase = 
 	parent = debian/kinetic/rqt_reconfigure
-	previous = 
+	previous = e06cc3b
