--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dcacc83
+	base = 40f1a06
 	trimbase = 
 	parent = release/kinetic/rqt_msg
-	previous = 
+	previous = dcacc83
