--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e586e59
+	base = dd4f54b
 	trimbase = 
 	parent = debian/kinetic/rqt_msg
-	previous = 
+	previous = e586e59
