--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0c2396c
+	base = 20e5a31
 	trimbase = 
 	parent = debian/kinetic/rqt_image_view
-	previous = 
+	previous = 0c2396c
