--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3b2456d
+	base = bcc9805
 	trimbase = 
 	parent = debian/kinetic/rqt_plot
-	previous = 
+	previous = 3b2456d
