--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a2233b7
+	base = 41a4254
 	trimbase = 
 	parent = debian/kinetic/rqt_py_common
-	previous = 
+	previous = a2233b7
