--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 08235ff
+	base = 1c14be3
 	trimbase = 
 	parent = debian/kinetic/rqt_bag_plugins
-	previous = 
+	previous = 08235ff
