--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 29aba50
+	base = 95704fb
 	trimbase = 
 	parent = debian/kinetic/rqt_bag
-	previous = 
+	previous = 29aba50
