--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3b32c65
+	base = 642e32e
 	trimbase = 
 	parent = debian/kinetic/rqt_common_plugins
-	previous = 
+	previous = 3b32c65
