--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 176f737
+	base = 3bd9f28
 	trimbase = 
 	parent = debian/kinetic/rqt_top
-	previous = 
+	previous = 176f737
