--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ec677cc
+	base = 30e3209
 	trimbase = 
 	parent = debian/kinetic/rqt_srv
-	previous = 
+	previous = ec677cc
