--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0cb76c4
+	base = ab3da2e
 	trimbase = 
 	parent = debian/kinetic/rqt_action
-	previous = 
+	previous = 0cb76c4
