--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4dd7021
+	base = 8892628
 	trimbase = 
 	parent = debian/kinetic/rqt_py_console
-	previous = 
+	previous = 4dd7021
