--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c4772a9
+	base = 1e8579e
 	trimbase = 
 	parent = debian/kinetic/rqt_service_caller
-	previous = 
+	previous = c4772a9
