--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 87d326d
+	base = 479d851
 	trimbase = 
 	parent = debian/kinetic/rqt_web
-	previous = 
+	previous = 87d326d
