--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8d4c11c
+	base = 8f0bcb4
 	trimbase = 
 	parent = debian/kinetic/rqt_dep
-	previous = 
+	previous = 8d4c11c
