--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b3a731d
+	base = 02b4597
 	trimbase = 
 	parent = debian/kinetic/rqt_launch
-	previous = 
+	previous = b3a731d
