--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 25379ce
+	base = cd7ccc8
 	trimbase = 
 	parent = debian/kinetic/rqt_topic
-	previous = 
+	previous = 25379ce
