--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 89c95b2
+	base = f073411
 	trimbase = 
 	parent = debian/kinetic/rqt_console
-	previous = 
+	previous = 89c95b2
