--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b0e779e
+	base = 098588a
 	trimbase = 
 	parent = debian/kinetic/rqt_shell
-	previous = 
+	previous = b0e779e
